[gd_scene load_steps=3 format=3 uid="uid://bmhod8l7ya0o5"]

[ext_resource type="Script" uid="uid://6fuue0tcve7x" path="res://Scripts/main_menu.gd" id="1_tt5f1"]
[ext_resource type="AudioStream" uid="uid://bia5hbgir8bye" path="res://Audio/Music/[free] midwest emo instrumental - don't worry about me.mp3" id="2_853f1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_tt5f1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.092
anchor_bottom = 0.21
offset_right = 0.0159912
offset_bottom = -0.0800018

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "LAOD GAME"

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="Button4" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_853f1")
autoplay = true

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button2" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button3" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Button4" to="." method="_on_Quit_pressed"]
